# json-motion

./: .gitignore  README.md  biome.jsonc  next.config.mjs  package.json  skills-lock.json
.claude/: CLAUDE.md  settings.json
.codex/environments/: environment.toml
app/: layout.tsx  page.tsx
app/_components/: context.tsx  helpers.ts  hero.tsx  preview-panel.tsx  preview-parts.tsx  prompt-form.tsx  use-preview-data.ts
app/playground/: page.tsx
benchmarks/: benchmark-engine.ts  modal_gpu_bench_client.py  modal_gpu_verify.py
components/: navbar.tsx  prompt-to-video-page.tsx  theme-provider.tsx  theme-toggle.tsx  video-result.tsx
components/ui/: alert.tsx  button.tsx  input.tsx  resizable.tsx  sonner.tsx  textarea.tsx
engine/: Cargo.toml
engine/src/: color.rs  encode.rs  icon.rs  layout.rs  lib.rs  main.rs  parallel_encode.rs  pipeline_review_tests.rs  render.rs  schema.rs  text.rs
engine/src/animation/: compile.rs  easing.rs  frame.rs  mod.rs  resolve.rs  segments.rs  snapshot.rs  timeline.rs
engine/src/encode/: mod.rs
engine/src/gpu/: atlas.rs  backend.rs  geometry.rs  mod.rs  path_pipeline.rs  readback.rs  rect.rs  text_pipeline.rs  util.rs
engine/src/gpu/shaders/: path.wgsl  rect.wgsl  text.wgsl
engine/src/render/: cpu.rs  mod.rs  transform.rs
engine/src/scene/: consts.rs  types.rs
engine/src/shared/: types.rs
lib/: constants.ts  errors.ts  handle-error.ts
scripts/: benchmark-engine.ts  modal_gpu_bench_client.py  modal_gpu_verify.py  modal_render_api.py  prompt-to-video-smoke.ts  render-fixture.ts
tasks/: lessons.md  todo.md
(+172 files in other folders)
