[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
rayon = "1"
skia-safe = "0.93.1"
ffmpeg-next = "8.1.0"
taffy = "0.7"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
