[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[features]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:lyon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
skia-safe = "0.93.1"
ffmpeg-next = "8.1.0"
taffy = "0.7"

# GPU backend (enabled via --features gpu)
wgpu = { version = "29", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
lyon = { version = "1", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
